[package]
name = "Meow_Mingle"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"

