[package]
name = "Meow_Mingle"
version = "0.1.0"
edition = "2024"
default-run = "Meow_Mingle"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "time", "runtime-tokio-native-tls"] }
dotenv = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
argon2 = "0.5.3"
rand_core = { version = "0.10.0" }
once_cell = "1.21.3"
toml = "1.0.6"
config = "0.15.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
futures = "0.3.32"
utoipa = { version = "5", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
cookie = "0.18.1"
axum-cookie = "0.2.4"

[dev-dependencies]
axum-test = "19.1.1"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
futures = "0.3.32"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[[bin]]
name = "add_cat"
path = "src/bin/add_cat.rs"

[lib]
name = "meow_mingle"
path = "src/lib.rs"
